hostFiles/bridge/rules.v4
# Generated by iptables-save v1.8.9 (nf_tables) on Mon Jan 12 07:34:49 2026
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22102 -j DNAT --to-destination 172.16.1.2:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22110 -j DNAT --to-destination 172.16.1.10:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22111 -j DNAT --to-destination 172.16.1.11:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22112 -j DNAT --to-destination 172.16.1.12:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22113 -j DNAT --to-destination 172.16.1.13:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22120 -j DNAT --to-destination 172.16.1.20:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22121 -j DNAT --to-destination 172.16.1.21:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22122 -j DNAT --to-destination 172.16.1.22:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22130 -j DNAT --to-destination 172.16.1.30:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22131 -j DNAT --to-destination 172.16.1.31:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22132 -j DNAT --to-destination 172.16.1.32:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22140 -j DNAT --to-destination 172.16.1.40:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22141 -j DNAT --to-destination 172.16.1.41:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22142 -j DNAT --to-destination 172.16.1.42:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22150 -j DNAT --to-destination 172.16.1.50:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22202 -j DNAT --to-destination 172.16.2.2:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22210 -j DNAT --to-destination 172.16.2.10:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22211 -j DNAT --to-destination 172.16.2.11:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22212 -j DNAT --to-destination 172.16.2.12:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22213 -j DNAT --to-destination 172.16.2.13:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22220 -j DNAT --to-destination 172.16.2.20:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22221 -j DNAT --to-destination 172.16.2.21:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22222 -j DNAT --to-destination 172.16.2.22:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22230 -j DNAT --to-destination 172.16.2.30:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22231 -j DNAT --to-destination 172.16.2.31:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22232 -j DNAT --to-destination 172.16.2.32:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22240 -j DNAT --to-destination 172.16.2.40:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22241 -j DNAT --to-destination 172.16.2.41:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22242 -j DNAT --to-destination 172.16.2.42:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22250 -j DNAT --to-destination 172.16.2.50:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22302 -j DNAT --to-destination 172.16.3.2:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22310 -j DNAT --to-destination 172.16.3.10:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22311 -j DNAT --to-destination 172.16.3.11:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22312 -j DNAT --to-destination 172.16.3.12:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22313 -j DNAT --to-destination 172.16.3.13:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22320 -j DNAT --to-destination 172.16.3.20:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22321 -j DNAT --to-destination 172.16.3.21:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22322 -j DNAT --to-destination 172.16.3.22:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22330 -j DNAT --to-destination 172.16.3.30:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22331 -j DNAT --to-destination 172.16.3.31:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22332 -j DNAT --to-destination 172.16.3.32:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22340 -j DNAT --to-destination 172.16.3.40:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22341 -j DNAT --to-destination 172.16.3.41:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22342 -j DNAT --to-destination 172.16.3.42:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22350 -j DNAT --to-destination 172.16.3.50:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22402 -j DNAT --to-destination 172.16.4.2:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22410 -j DNAT --to-destination 172.16.4.10:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22411 -j DNAT --to-destination 172.16.4.11:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22412 -j DNAT --to-destination 172.16.4.12:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22413 -j DNAT --to-destination 172.16.4.13:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22420 -j DNAT --to-destination 172.16.4.20:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22421 -j DNAT --to-destination 172.16.4.21:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22422 -j DNAT --to-destination 172.16.4.22:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22430 -j DNAT --to-destination 172.16.4.30:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22431 -j DNAT --to-destination 172.16.4.31:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22432 -j DNAT --to-destination 172.16.4.32:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22440 -j DNAT --to-destination 172.16.4.40:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22441 -j DNAT --to-destination 172.16.4.41:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22442 -j DNAT --to-destination 172.16.4.42:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22450 -j DNAT --to-destination 172.16.4.50:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22502 -j DNAT --to-destination 172.16.5.2:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22510 -j DNAT --to-destination 172.16.5.10:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22511 -j DNAT --to-destination 172.16.5.11:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22512 -j DNAT --to-destination 172.16.5.12:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22513 -j DNAT --to-destination 172.16.5.13:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22520 -j DNAT --to-destination 172.16.5.20:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22521 -j DNAT --to-destination 172.16.5.21:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22522 -j DNAT --to-destination 172.16.5.22:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22530 -j DNAT --to-destination 172.16.5.30:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22531 -j DNAT --to-destination 172.16.5.31:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22532 -j DNAT --to-destination 172.16.5.32:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22540 -j DNAT --to-destination 172.16.5.40:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22541 -j DNAT --to-destination 172.16.5.41:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22542 -j DNAT --to-destination 172.16.5.42:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22550 -j DNAT --to-destination 172.16.5.50:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22602 -j DNAT --to-destination 172.16.6.2:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22610 -j DNAT --to-destination 172.16.6.10:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22611 -j DNAT --to-destination 172.16.6.11:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22612 -j DNAT --to-destination 172.16.6.12:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22613 -j DNAT --to-destination 172.16.6.13:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22620 -j DNAT --to-destination 172.16.6.20:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22621 -j DNAT --to-destination 172.16.6.21:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22622 -j DNAT --to-destination 172.16.6.22:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22630 -j DNAT --to-destination 172.16.6.30:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22631 -j DNAT --to-destination 172.16.6.31:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22632 -j DNAT --to-destination 172.16.6.32:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22640 -j DNAT --to-destination 172.16.6.40:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22641 -j DNAT --to-destination 172.16.6.41:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22642 -j DNAT --to-destination 172.16.6.42:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22650 -j DNAT --to-destination 172.16.6.50:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22702 -j DNAT --to-destination 172.16.7.2:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22710 -j DNAT --to-destination 172.16.7.10:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22711 -j DNAT --to-destination 172.16.7.11:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22712 -j DNAT --to-destination 172.16.7.12:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22713 -j DNAT --to-destination 172.16.7.13:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22720 -j DNAT --to-destination 172.16.7.20:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22721 -j DNAT --to-destination 172.16.7.21:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22722 -j DNAT --to-destination 172.16.7.22:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22730 -j DNAT --to-destination 172.16.7.30:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22731 -j DNAT --to-destination 172.16.7.31:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22732 -j DNAT --to-destination 172.16.7.32:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22740 -j DNAT --to-destination 172.16.7.40:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22741 -j DNAT --to-destination 172.16.7.41:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22742 -j DNAT --to-destination 172.16.7.42:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22750 -j DNAT --to-destination 172.16.7.50:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22802 -j DNAT --to-destination 172.16.8.2:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22810 -j DNAT --to-destination 172.16.8.10:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22811 -j DNAT --to-destination 172.16.8.11:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22812 -j DNAT --to-destination 172.16.8.12:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22813 -j DNAT --to-destination 172.16.8.13:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22820 -j DNAT --to-destination 172.16.8.20:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22821 -j DNAT --to-destination 172.16.8.21:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22822 -j DNAT --to-destination 172.16.8.22:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22830 -j DNAT --to-destination 172.16.8.30:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22831 -j DNAT --to-destination 172.16.8.31:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22832 -j DNAT --to-destination 172.16.8.32:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22840 -j DNAT --to-destination 172.16.8.40:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22841 -j DNAT --to-destination 172.16.8.41:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22842 -j DNAT --to-destination 172.16.8.42:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22850 -j DNAT --to-destination 172.16.8.50:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22902 -j DNAT --to-destination 172.16.9.2:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22910 -j DNAT --to-destination 172.16.9.10:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22911 -j DNAT --to-destination 172.16.9.11:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22912 -j DNAT --to-destination 172.16.9.12:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22913 -j DNAT --to-destination 172.16.9.13:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22920 -j DNAT --to-destination 172.16.9.20:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22921 -j DNAT --to-destination 172.16.9.21:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22922 -j DNAT --to-destination 172.16.9.22:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22930 -j DNAT --to-destination 172.16.9.30:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22931 -j DNAT --to-destination 172.16.9.31:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22932 -j DNAT --to-destination 172.16.9.32:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22940 -j DNAT --to-destination 172.16.9.40:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22941 -j DNAT --to-destination 172.16.9.41:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22942 -j DNAT --to-destination 172.16.9.42:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22950 -j DNAT --to-destination 172.16.9.50:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 44120 -j DNAT --to-destination 172.16.1.20:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 44130 -j DNAT --to-destination 172.16.1.30:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 44140 -j DNAT --to-destination 172.16.1.40:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 44220 -j DNAT --to-destination 172.16.2.20:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 44230 -j DNAT --to-destination 172.16.2.30:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 44240 -j DNAT --to-destination 172.16.2.40:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 44320 -j DNAT --to-destination 172.16.3.20:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 44330 -j DNAT --to-destination 172.16.3.30:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 44340 -j DNAT --to-destination 172.16.3.40:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 44420 -j DNAT --to-destination 172.16.4.20:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 44430 -j DNAT --to-destination 172.16.4.30:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 44440 -j DNAT --to-destination 172.16.4.40:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 44520 -j DNAT --to-destination 172.16.5.20:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 44530 -j DNAT --to-destination 172.16.5.30:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 44540 -j DNAT --to-destination 172.16.5.40:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 44620 -j DNAT --to-destination 172.16.6.20:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 44630 -j DNAT --to-destination 172.16.6.30:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 44640 -j DNAT --to-destination 172.16.6.40:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 44720 -j DNAT --to-destination 172.16.7.20:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 44720 -j DNAT --to-destination 172.16.7.20:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 44730 -j DNAT --to-destination 172.16.7.30:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 44840 -j DNAT --to-destination 172.16.8.40:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 44830 -j DNAT --to-destination 172.16.8.30:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 44840 -j DNAT --to-destination 172.16.8.40:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 44940 -j DNAT --to-destination 172.16.9.40:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 44930 -j DNAT --to-destination 172.16.9.30:80
-A PREROUTING -i eth0 -p tcp -m tcp --dport 44940 -j DNAT --to-destination 172.16.9.40:80
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Mon Jan 12 07:34:49 2026
